@@ -1,3 +1,8 @@
+2005-12-28 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* replaced popen() with Glib::spawn_command_line_sync() + general
+	  cleanups in the set_used_sectors() functions.
+
 2005-12-25 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* merry christmas
